[package]
name = "xdp-features"
version = "0.1.0"
edition = "2024"

[features]
default = ["agave-unstable-api"]
agave-unstable-api = ["agave-xdp/agave-unstable-api"]

[dependencies]
agave-xdp = { git = "https://github.com/anza-xyz/agave.git", branch = "master", package = "agave-xdp", features = ["agave-unstable-api"] }
clap = { version = "4.6.1", default-features = false, features = [
    "derive",
    "error-context",
    "help",
    "std",
    "suggestions",
    "usage",
] }
libc = "0.2"
